--- a/index.html
+++ b/index.html
@@ -27,13 +27,8 @@
 <div id="container">
 <div>
 <h1 id="h1" class="transition-in">
-	<span class="letter-0">M</span>
-	<span class="letter-1">u</span>
-	<span class="letter-2">r</span>
-	<span class="letter-3">p</span>
-	<span class="letter-4">h</span>
-	<span class="letter-5">y</span>
-	<span class="letter-6">y</span>
+	<span class="letter-0">M u r p h y y</span>
+	
 </h1>
 <br><br><br><br><br><br><br><br>
 
