--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div id="container">
 <div>
 <h1 id="h1" class="transition-in">
-	<span class="letter-0">M u r p h y y</span>
+	<span >M u r p h y y</span>
 	
 </h1>
 <br><br><br><br><br><br><br><br>
